--- a/main.css
+++ b/main.css
@@ -6,11 +6,9 @@ body {
     font-size: 16px;
 }
 
-  
 #title-bar {
     background-color: #333;
     color: #fff;
-    padding: 10px;
 }
 
 #side-bar {
@@ -359,4 +357,15 @@ td.right {
 #card-evo-to.card-hidden {
     height: 10em;
     overflow-y: scroll;
+}
+
+.title-div {
+    display: inline-block;
+    padding: 0 1em;
+    width: fit-content;
+}
+
+.title-div a {
+    color: #fff;
+    text-decoration: none;
 }
